# Now-Play

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  CopyThread.cpp  CopyThread.h  NowPlay.cpp  NowPlay.h  NowPlayDialog.ui  ProcessThread.cpp  ProcessThread.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Utils.cpp  Utils.h  icon.rc.in  main.cpp  nowplay.cpp  readme.md  resources.rc.in  termcolor.h  winampapi.h
rsc/: resources.qrc
